# job-match-db

./: .gitignore  Makefile  README.md  init_mac.sh  init_win.ps1  pyproject.toml
.github/workflows/: main.yml
src/: .env_template  run_server.py
src/app/: main.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: category_router.py  city_router.py  company_router.py  job_ad_router.py  job_application_router.py  match_router.py  professional_router.py  skill_router.py
src/app/core/: config.py
src/app/schemas/: __init__.py  category.py  city.py  common.py  company.py  custom_types.py  job_ad.py  job_application.py  match.py  professional.py  skill.py  user.py
src/app/services/: category_service.py  city_service.py  common.py  company_service.py  job_ad_service.py  job_application_service.py  match_request_service.py  match_service.py  professional_service.py  skill_service.py
src/app/sql_app/: __init__.py  database.py  init_data.py
src/app/sql_app/category/: category.py
src/app/sql_app/category_job_application/: category_job_application.py
src/app/sql_app/city/: city.py
src/app/sql_app/company/: company.py
src/app/sql_app/job_ad/: job_ad.py  job_ad_status.py
src/app/sql_app/job_ad_skill/: job_ad_skill.py
src/app/sql_app/job_application/: job_application.py  job_application_status.py
src/app/sql_app/job_application_skill/: job_application_skill.py
src/app/sql_app/job_requirement/: skill_level.py
src/app/sql_app/match/: match.py  match_status.py
src/app/sql_app/pending_skill/: pending_skill.py
src/app/sql_app/professional/: professional.py  professional_status.py
src/app/sql_app/skill/: skill.py
src/app/utils/: password_utils.py  processors.py
tests/: test_data.py  utils.py
tests/services/: category_service_test.py  city_service_test.py  common_test.py  company_service_test.py  job_ad_service_test.py  job_application_service_test.py  match_service_test.py  professional_service_test.py  skill_service_test.py
tests/services/utils/: processors_test.py
